Fix Extra files for git ignore
Added extra folder and respective files :
- Library
- ArtifactDB

Need to understand if this might crash anything when launching the game or not

--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,8 @@ ExportedObj/
 *.opendb
 *.VC.db
 
+
+
 # Unity3D generated meta files
 *.pidb.meta
 *.pdb.meta
@@ -60,6 +62,10 @@ sysinfo.txt
 *.aab
 *.unitypackage
 *.app
+
+#Artifact and Library files
+/Library/
+/ArtifactDB/
 
 # Crashlytics generated file
 crashlytics-build.properties
