Added Ability System (Incomplete)

--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,82 @@ My project (1)/Logs/AssetImportWorker1.log
 My project (1)/Logs/AssetImportWorker1-prev.log
 My project (1)/Logs/AssetImportWorker0.log
 My project (1)/Logs/AssetImportWorker0-prev.log
+My project (1)/obj/Debug/UnityEngine.UI.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/UnityEngine.TestRunner.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/UnityEditor.UI.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/UnityEditor.TestRunner.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.VSCode.Editor.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.VisualStudio.Editor.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.VisualScripting.State.Editor.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.VisualScripting.State.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.VisualScripting.Shared.Editor.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.VisualScripting.SettingsProvider.Editor.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.VisualScripting.Flow.Editor.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.VisualScripting.Flow.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.VisualScripting.Core.Editor.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.VisualScripting.Core.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.Timeline.Editor.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.Timeline.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.TextMeshPro.Editor.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.TextMeshPro.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.Subsystem.Registration.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.Rider.Editor.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.Profiling.Core.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.PlasticSCM.Editor.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.Notifications.iOS.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.Notifications.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.Notifications.Android.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.Mobile.AndroidLogcat.Editor.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.Mathematics.Editor.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.Mathematics.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.InternalAPIEngineBridge.001.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.InternalAPIEditorBridge.001.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.Collections.DocCodeSamples.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.Collections.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.Collections.BurstCompatibilityGen.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.CollabProxy.Editor.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.Burst.Editor.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.Burst.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.Burst.CodeGen.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.AdaptivePerformance.UI.Editor.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.AdaptivePerformance.Simulator.Extension.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.AdaptivePerformance.Simulator.Editor.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.AdaptivePerformance.Profiler.Editor.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.AdaptivePerformance.Editor.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.AdaptivePerformance.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.2D.Tilemap.Extras.Editor.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.2D.Tilemap.Extras.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.2D.Tilemap.Editor.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.2D.SpriteShape.Runtime.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.2D.SpriteShape.Editor.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.2D.Sprite.Editor.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.2D.Psdimporter.Editor.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.2D.PixelPerfect.Editor.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.2D.PixelPerfect.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.2D.IK.Runtime.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.2D.IK.Editor.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.2D.Common.Runtime.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.2D.Common.Path.Editor.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.2D.Common.Editor.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.2D.Animation.Runtime.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/Unity.2D.Animation.Editor.csproj.AssemblyReference.cache
+My project (1)/UserSettings/Layouts/default-2022.dwlt
+My project (1)/ProjectSettings/EditorBuildSettings.asset
+My project (1)/obj/Debug/Sirenix.OdinInspector.Modules.UnityMathematics.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
+My project (1)/obj/Debug/Assembly-CSharp.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/PsdPlugin.csproj.AssemblyReference.cache
+My project (1)/Temp/FSTimeGet-6d4c8b7bb7e582841b4f78ea0aa600eb
+My project (1)/Logs/shadercompiler-AssetImportWorker0.log
+My project (1)/Logs/AssetImportWorker1.log
+My project (1)/Logs/AssetImportWorker0.log
+My project (1)/Assets/Unity.VisualScripting.Generated/VisualScripting.Flow/UnitOptions.db
+My project (1)/UserSettings/Layouts/default-2022.dwlt
+My project (1)/ProjectSettings/EditorBuildSettings.asset
+My project (1)/obj/Debug/Sirenix.OdinInspector.Modules.UnityMathematics.csproj.AssemblyReference.cache
+My project (1)/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
+My project (1)/obj/Debug/Assembly-CSharp.csproj.AssemblyReference.cache
+My project (1)/Logs/shadercompiler-AssetImportWorker0.log
+My project (1)/Logs/AssetImportWorker1.log
+My project (1)/Logs/AssetImportWorker0.log
+My project (1)/Assets/Unity.VisualScripting.Generated/VisualScripting.Flow/UnitOptions.db
